(menhir
 (modules parser)
 (flags ("--dump" "--explain")))

(ocamllex
 (modules lexer))

(library
 (name ch8)
 (inline_tests)
 (libraries core textutils.ascii_table logs fmt logs.fmt)
 (preprocess (pps ppx_deriving.show ppx_compare ppx_deriving.make ppx_sexp_conv ppx_inline_test ppx_expect)))

(env (dev (flags (:standard -warn-error -A))))
